@@ -399,6 +399,9 @@ public:
 	int floating_control_width;
 	bool floating_control_animated;
 	bool floating_display_in_compact_mode;
+#ifndef Q_OS_WIN
+	bool bypass_window_manager;
+#endif
 };
 
 #endif
